THE OMG It's so much better Update.
See Changelog. This deserves an actual release. This should be the last major update before removing allegro and going to my own code. That is still getting major bugfixes and features.

--- a/Release/aae.ini
+++ b/Release/aae.ini
@@ -3,16 +3,16 @@
 [main]
 
 ;mame_rom_path = f:\mame\roms
-screenw =1920
-screenh =1080
+screenw =1280
+screenh =1024
 widescreen = 0
 windowed = 0
-force_vsync =0 
+force_vsync = 1 
 doublebuffer = 1               ;Enable Duble buffering for a smoother display
 drawzero =0
 
 linewidth = 2.0                ;#Linewidth for Vector Games
-pointsize = 1.5                ;#PointSize for Vector Games
+pointsize = 1.4                ;#PointSize for Vector Games
 gamma =127   
 bright =127 
 contrast =127                   
@@ -21,6 +21,7 @@ accumlevel = 0
 fire_point_size = 20           ;#ASTEROIDS AND ASTEROIDS DELUXE
 explode_point_size = 17        ;#ASTEROIDS AND ASTEROIDS DELUXE
 debug = 0
+debug_profile_code = 0
 kbleds =1
 
 ;##### ARTWORK OPTIONS ############
@@ -72,15 +73,15 @@ mainvol =18
 ###########################
 anisfilter = 0      #Enable  Filtering Disable for sharp textures
 prescale = 2        #Raster Prescale value
-priority =1
-snappng=0
-vectorglow=9
-vectortrail=1
-gain=20
-m_line=22
-m_point=16
-monitor=0
-screenburn=0
+priority = 1
+snappng = 0
+vectorglow = 6
+vectortrail = 0
+gain = 20
+m_line = 22
+m_point = 16
+monitor = 0
+screenburn = 0
 
 
 [mouse]
