--- a/Release/video.ini
+++ b/Release/video.ini
@@ -179,10 +179,10 @@ bezcropy=
 overalpha=
 
 [bwidow]
-fullsx=97
-fullsy=925
-fullex=-58
-fulley=842
+fullsx=20; left
+fullsy=1000 ;right
+fullex=-55 ;bottom
+fulley=832 ; top
 bezelsx=
 bezelsy=
 bezelex=
