--- a/AAE2024/AAE2024.vcxproj
+++ b/AAE2024/AAE2024.vcxproj
@@ -154,7 +154,7 @@
     <ClCompile Include="drivers\asteroid.cpp" />
     <ClCompile Include="drivers\bwidow.cpp" />
     <ClCompile Include="drivers\bzone.cpp" />
-    <ClCompile Include="drivers\cinemat.cpp" />
+    <ClCompile Include="drivers\cinematronics_driver.cpp" />
     <ClCompile Include="drivers\llander.cpp" />
     <ClCompile Include="drivers\mhavoc.cpp" />
     <ClCompile Include="drivers\omegrace.cpp" />
@@ -189,7 +189,7 @@
     <ClCompile Include="sndhrdw\5220intf.cpp" />
     <ClCompile Include="sndhrdw\aae_mame_pokey_2.4.cpp" />
     <ClCompile Include="sndhrdw\ay8910.cpp" />
-    <ClCompile Include="sndhrdw\cinesnd.cpp" />
+    <ClCompile Include="sndhrdw\cinematronics_sound.cpp" />
     <ClCompile Include="sndhrdw\samples.cpp" />
     <ClCompile Include="sndhrdw\SegaG80snd.cpp" />
     <ClCompile Include="sndhrdw\starwars_snd.cpp" />
@@ -204,7 +204,7 @@
     <ClCompile Include="texrect.cpp" />
     <ClCompile Include="texrect2dvbo.cpp" />
     <ClCompile Include="vidhrdwr\aae_avg.cpp" />
-    <ClCompile Include="vidhrdwr\cinematvid.cpp" />
+    <ClCompile Include="vidhrdwr\cinematronics_video.cpp" />
     <ClCompile Include="vidhrdwr\mhavoc_custom_video.cpp" />
     <ClCompile Include="vidhrdwr\old_mame_vecsim_dvg.cpp" />
     <ClCompile Include="vidhrdwr\SegaG80vid.cpp" />
@@ -240,7 +240,7 @@
     <ClInclude Include="drivers\asteroid.h" />
     <ClInclude Include="drivers\bwidow.h" />
     <ClInclude Include="drivers\bzone.h" />
-    <ClInclude Include="drivers\cinemat.h" />
+    <ClInclude Include="drivers\cinematronics_driver.h" />
     <ClInclude Include="drivers\llander.h" />
     <ClInclude Include="drivers\mhavoc.h" />
     <ClInclude Include="drivers\omegrace.h" />
@@ -285,6 +285,7 @@
     <ClInclude Include="sndhrdw\5220intf.h" />
     <ClInclude Include="sndhrdw\aae_mame_pokey_2.4.h" />
     <ClInclude Include="sndhrdw\ay8910.h" />
+    <ClInclude Include="sndhrdw\cinematronics_sound.h" />
     <ClInclude Include="sndhrdw\samples.h" />
     <ClInclude Include="sndhrdw\segag80snd.h" />
     <ClInclude Include="sndhrdw\starwars_snd.h" />
@@ -303,6 +304,7 @@
     <ClInclude Include="texrect.h" />
     <ClInclude Include="texrect2dvbo.h" />
     <ClInclude Include="vidhrdwr\aae_avg.h" />
+    <ClInclude Include="vidhrdwr\cinematronics_video.h" />
     <ClInclude Include="vidhrdwr\mhavoc_custom_video.h" />
     <ClInclude Include="vidhrdwr\old_mame_vecsim_dvg.h" />
     <ClInclude Include="vidhrdwr\SegaG80vid.h" />
