--- a/AAE2024/AAE2024.vcxproj
+++ b/AAE2024/AAE2024.vcxproj
@@ -204,11 +204,19 @@
     <ClCompile Include="texrect.cpp" />
     <ClCompile Include="texrect2dvbo.cpp" />
     <ClCompile Include="vidhrdwr\aae_avg.cpp" />
+    <ClCompile Include="vidhrdwr\avgdvg.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="vidhrdwr\cinematronics_video.cpp" />
     <ClCompile Include="vidhrdwr\emu_vector_draw.cpp" />
+    <ClCompile Include="vidhrdwr\fast_poly.cpp" />
     <ClCompile Include="vidhrdwr\mhavoc_custom_video.cpp" />
     <ClCompile Include="vidhrdwr\old_mame_vecsim_dvg.cpp" />
+    <ClCompile Include="vidhrdwr\raster.cpp" />
     <ClCompile Include="vidhrdwr\SegaG80vid.cpp" />
+    <ClCompile Include="vidhrdwr\vector.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="win10_win11_required_code.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -304,11 +312,19 @@
     <ClInclude Include="texrect.h" />
     <ClInclude Include="texrect2dvbo.h" />
     <ClInclude Include="vidhrdwr\aae_avg.h" />
+    <ClInclude Include="vidhrdwr\avgdvg.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="vidhrdwr\cinematronics_video.h" />
     <ClInclude Include="vidhrdwr\emu_vector_draw.h" />
+    <ClInclude Include="vidhrdwr\fast_poly.h" />
     <ClInclude Include="vidhrdwr\mhavoc_custom_video.h" />
     <ClInclude Include="vidhrdwr\old_mame_vecsim_dvg.h" />
+    <ClInclude Include="vidhrdwr\raster.h" />
     <ClInclude Include="vidhrdwr\SegaG80vid.h" />
+    <ClInclude Include="vidhrdwr\vector.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="win10_win11_required_code.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
