--- a/aae2025/aae2025.vcxproj.filters
+++ b/aae2025/aae2025.vcxproj.filters
@@ -372,6 +372,9 @@
     <ClInclude Include="cpu_code\68000\mem68k.h">
       <Filter>Source Files\cpu_code\68000</Filter>
     </ClInclude>
+    <ClInclude Include="drivers\aztarac.h">
+      <Filter>Source Files\drivers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sys_window\rawinput.cpp">
@@ -637,6 +640,9 @@
     </ClCompile>
     <ClCompile Include="cpu_code\68000\m68kcpu.cpp">
       <Filter>Source Files\cpu_code\68000</Filter>
+    </ClCompile>
+    <ClCompile Include="drivers\aztarac.cpp">
+      <Filter>Source Files\drivers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
