--- a/x64/Release/aae.ini
+++ b/x64/Release/aae.ini
@@ -22,6 +22,7 @@ fire_point_size = 20           ;#ASTEROIDS AND ASTEROIDS DELUXE
 explode_point_size = 17        ;#ASTEROIDS AND ASTEROIDS DELUXE
 debug = 0
 kbleds =1
+debug_profile_code = 0
 
 ;##### ARTWORK OPTIONS ############
 bezel  = 0
@@ -78,7 +79,7 @@ vectorglow = 6
 vectortrail = 0
 gain = 20
 m_line = 22
-m_point = 16
+m_point = 12
 monitor = 0
 screenburn = 0
 
