--- a/x64/Release/aae.ini
+++ b/x64/Release/aae.ini
@@ -22,7 +22,7 @@ fire_point_size = 20           ;#ASTEROIDS AND ASTEROIDS DELUXE
 explode_point_size = 17        ;#ASTEROIDS AND ASTEROIDS DELUXE
 debug = 0
 kbleds =1
-debug_profile_code = 0
+debug_profile_code = 0         ;Enable this for verbose logging (debugging and profiling)
 
 ;##### ARTWORK OPTIONS ############
 bezel  = 0
