Some Fixes, added Aztarac driver
See Changelog

--- a/x64/Release/aae.ini
+++ b/x64/Release/aae.ini
@@ -3,8 +3,8 @@
 [main]
 
 ;mame_rom_path = f:\mame\roms
-screenw =1280
-screenh =1024
+screenw =1920
+screenh =1080
 widescreen = 0
 windowed = 0
 force_vsync = 1 
@@ -23,6 +23,7 @@ explode_point_size = 17        ;#ASTEROIDS AND ASTEROIDS DELUXE
 debug = 0
 kbleds =1
 debug_profile_code = 0         ;Enable this for verbose logging (debugging and profiling)
+audio_force_resample = 0;      ;Force resampling of all samples to the selected samplerate
 
 ;##### ARTWORK OPTIONS ############
 bezel  = 0
