--- a/x64/Release/video.ini
+++ b/x64/Release/video.ini
@@ -1299,3 +1299,22 @@ bezcropzoom=
 bezcropx=
 bezcropy=
 overalpha=
+
+[aztarac]
+fullsx=0
+fullsy=1024
+fullex=1024
+fulley=1
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=1.3
+bezcropx=-130
+bezcropy=-30
+overalpha=.96
+
