Updated Rom Loading and all rom names to current MAME

--- a/aae2025/aae2025.vcxproj
+++ b/aae2025/aae2025.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="machine\earom.h" />
     <ClInclude Include="machine\mathbox.h" />
     <ClInclude Include="machine\SegaG80crypt.h" />
+    <ClInclude Include="machine\slapstic.h" />
     <ClInclude Include="machine\swmathbx.h" />
     <ClInclude Include="MathUtils.h" />
     <ClInclude Include="memory.h" />
@@ -288,6 +289,7 @@
     <ClCompile Include="machine\earom.cpp" />
     <ClCompile Include="machine\mathbox.cpp" />
     <ClCompile Include="machine\SegaG80crypt.cpp" />
+    <ClCompile Include="machine\slapstic.cpp" />
     <ClCompile Include="machine\swmathbx.cpp" />
     <ClCompile Include="memory.cpp" />
     <ClCompile Include="menu.cpp" />
