--- a/x64/Release/video.ini
+++ b/x64/Release/video.ini
@@ -52,7 +52,7 @@ bezcropx=-100
 bezcropy=-50
 overalpha=.96
 
-[asteroib]
+[asteroidb]
 fullsx=0
 fullsy=1024
 fullex=0
@@ -70,7 +70,7 @@ bezcropx=-100
 bezcropy=-50
 overalpha=.96
 
-[asteroi1]
+[asteroid1]
 fullsx=0
 fullsy=1024
 fullex=0
@@ -106,7 +106,7 @@ bezcropx=-100
 bezcropy=-50
 overalpha=.96
 
-[astdelu1]
+[astdelux1]
 fullsx=0
 fullsy=1024
 fullex=0
@@ -124,7 +124,7 @@ bezcropx=-37
 bezcropy=-60
 overalpha=1.0
 
-[astdelu2]
+[astdelux2]
 fullsx=0
 fullsy=1024
 fullex=0
@@ -178,6 +178,42 @@ bezcropx=
 bezcropy=
 overalpha=
 
+[spacduel0]
+fullsx=7
+fullsy=1018
+fullex=-118
+fulley=884
+bezelsx=0
+bezelsy=970
+bezelex=0
+bezeley=950
+cropsx=0
+cropsy=970
+cropex=0
+cropey=950
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
+[spacduel1]
+fullsx=7
+fullsy=1018
+fullex=-118
+fulley=884
+bezelsx=0
+bezelsy=970
+bezelex=0
+bezeley=950
+cropsx=0
+cropsy=970
+cropex=0
+cropey=950
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
 [bwidow]
 fullsx=20; left
 fullsy=1000 ;right
@@ -195,6 +231,26 @@ bezcropzoom=
 bezcropx=
 bezcropy=
 overalpha=
+
+
+[bwidowp]
+fullsx=20; left
+fullsy=1000 ;right
+fullex=-55 ;bottom
+fulley=832 ; top
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
 
 [gravitar]
 fullsx=-79
@@ -214,7 +270,7 @@ bezcropx=
 bezcropy=
 overalpha=
 
-[gravitr2]
+[gravitar2]
 fullsx=-79
 fullsy=1107
 fullex=-118
@@ -251,10 +307,10 @@ bezcropy=
 overalpha=
 
 [lunarbat]
-fullsx=-23
-fullsy=1101
-fullex=-118
-fulley=881
+fullsx=0 ;left
+fullsy=1024 ;right
+fullex=-125 ; bottom
+fulley=895  ; top
 bezelsx=
 bezelsy=
 bezelex=
@@ -269,10 +325,10 @@ bezcropy=
 overalpha=
 
 [lunarba1]
-fullsx=-23
-fullsy=1101
-fullex=-118
-fulley=881
+fullsx=0 ;left
+fullsy=1024 ;right
+fullex=-125 ; bottom
+fulley=895  ; top
 bezelsx=
 bezelsy=
 bezelex=
@@ -285,6 +341,7 @@ bezcropzoom=
 bezcropx=
 bezcropy=
 overalpha=
+
 
 [zektor]
 fullsx=7
@@ -641,12 +698,12 @@ overalpha=
 [temptube]
 fullsx=-60
 fullsy=1097
-fullex=-284
+fullex=-338
 fulley=1104
-bezelsx=-60
-bezelsy=1097
-bezelex=-338
-bezeley=1104
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
 cropsx=
 cropsy=
 cropex=
@@ -657,7 +714,7 @@ bezcropy=
 overalpha=
 
 
-[tvortex]
+[vortex]
 fullsx=-60
 fullsy=1097
 fullex=-338
@@ -787,6 +844,25 @@ bezcropx=
 bezcropy=
 overalpha=
 
+[elim2c]
+fullsx=7
+fullsy=1026
+fullex=847
+fulley=-75
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
+
 [elim4]
 fullsx=7
 fullsy=1026
@@ -822,6 +898,26 @@ bezcropzoom=1.16
 bezcropx=-50
 bezcropy=-110
 overalpha=
+
+
+[elim4p]
+fullsx=7
+fullsy=1026
+fullex=847
+fulley=-75
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=
+bezcropx=
+bezcropy=
+overalpha=
+
 
 [spacfura]
 fullsx=10
@@ -1114,7 +1210,7 @@ bezcropx=-130
 bezcropy=-30
 overalpha=.96
 
-[starwar1]
+[starwars1]
 fullsx=-12
 fullsy=1418
 fullex=936
@@ -1245,7 +1341,7 @@ bezcropy=-110
 overalpha=
 
 
-[alphaona]
+[alphaonea]
 fullsx=1
 fullsy=1025
 fullex=-24
