--- a/aae2025/aae2025.vcxproj.filters
+++ b/aae2025/aae2025.vcxproj.filters
@@ -372,6 +372,9 @@
     <ClInclude Include="vidhrdwr\cohen_sutherland_clipping.h">
       <Filter>Source Files\vidhrdwr</Filter>
     </ClInclude>
+    <ClInclude Include="machine\slapstic.h">
+      <Filter>Source Files\machine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sys_window\rawinput.cpp">
@@ -637,6 +640,9 @@
     </ClCompile>
     <ClCompile Include="vidhrdwr\cohen_sutherland_clipping.cpp">
       <Filter>Source Files\vidhrdwr</Filter>
+    </ClCompile>
+    <ClCompile Include="machine\slapstic.cpp">
+      <Filter>Source Files\machine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
