--- a/x64/Release/video.ini
+++ b/x64/Release/video.ini
@@ -1228,6 +1228,25 @@ bezcropx=-130
 bezcropy=-30
 overalpha=.96
 
+[esb]
+fullsx=-10
+fullsy=1390
+fullex=930
+fulley=0
+bezelsx=
+bezelsy=
+bezelex=
+bezeley=
+cropsx=
+cropsy=
+cropex=
+cropey=
+bezcropzoom=1.3
+bezcropx=-130
+bezcropy=-30
+overalpha=.96
+
+
 [mhavoc]
 fullsx=-58
 fullsy=1105
