--- a/x64/Release/aae.ini
+++ b/x64/Release/aae.ini
@@ -8,7 +8,7 @@ screenh =768
 widescreen = 0
 windowed = 0
 force_vsync = 1 
-doublebuffer = 1               ;Enable Duble buffering for a smoother display
+doublebuffer = 1               ;Enable Double buffering for a smoother display
 drawzero =0
 samplerate = 44100
 linewidth = 2.0                ;#Linewidth for Vector Games
